[package]
name = "plainjson"
version = "0.1.0"
description = "A library simply provides low-level access and JSONPath way to query or set JSON values."
authors = ["longrunsoul <longrunsoul@outlook.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode_reader = "1.0.1"
anyhow = "1.0.40"